# unary

./: README.md  dbedit.py  init.py  model.py  pyproject.toml  run.sh  sample_insert.py  server.py
client/: app.css  app.js  app.scss  bower.json  index.html  package-lock.json  package.json  vite.config.js
client-old/: app.js  package.json
client-old/lib/: mixins.js  vue-history.js  vue-product.js
client/lib/: mixins.js  vue-adduser.js  vue-animated-number.js  vue-balance.js  vue-deposit.js  vue-history.js  vue-product.js  vue-user.js
client/src/: App.vue  main.js
client/src/components/: HelloWorld.vue
migrations/versions/: 0bb076d3f9a7_.py  0cb26867ad03_.py  4659bb930f82_.py  5596da4479dc_.py  8327c548059f_.py
static/css/: app.css  bootstrap  bootstrap-vue  fontawesome
static/css/bootstrap-vue/: bootstrap-vue.min.css
static/icon/: favicon.xcf
static/img/: products  users
static/js/: app.js  bootstrap  fontawesome  jquery  lib  popper  socket.io  tweenjs  vue  vue-color
static/js/bootstrap-vue/: bootstrap-vue.min.js
templates/: index.html
